Finishing about & our-offer & gallery sections

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -33,6 +34,7 @@
         </div>
       </div>
     </header>
+    <div class="header-shadow"></div>
     <!-- demo-panel-menu -->
     <div class="demo-panel-menu">
       <div class="demo-1">
@@ -81,10 +83,22 @@
               with this theme. Everyday it make our lives better.
             </p>
             <ul>
-              <li>We care about environment.</li>
-              <li>We are trusted by hundreds of clients.</li>
-              <li>Social media loves us!</li>
-              <li>This list is super easy to create.</li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                <p>We care about environment.</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-user-group"></i>
+                <p>We are trusted by hundreds of clients.</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-heart"></i>
+                <p>Social media loves us!</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-bars"></i>
+                <p>This list is super easy to create.</p>
+              </li>
             </ul>
           </div>
         </div>
