Finishing contact section

--- a/index.html
+++ b/index.html
@@ -190,13 +190,26 @@
             </p>
             <p>Our contact details:</p>
             <ul>
-              <li>Manchester St 123-78B, Random 713, UK</li>
-              <li>+46 123 456 789</li>
-              <li>+37 431 456 789</li>
-              <li>hello@sitename.com</li>
+              <li>
+                <i class="fa-solid fa-location-dot"></i>Manchester St 123-78B,
+                Random 713, UK
+              </li>
+              <li><i class="fa-solid fa-phone"></i>+46 123 456 789</li>
+              <li><i class="fa-solid fa-headphones"></i>+37 431 456 789</li>
+              <li><i class="fa-solid fa-paper-plane"></i>hello@sitename.com</li>
             </ul>
           </div>
-          <iframe src="https://maps.google.com/" frameborder="0"></iframe>
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1728.237125887756!2d31.27024247116394!3d29.96579772817694!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1714935254135!5m2!1sen!2seg"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </div>
     </div>
