Finishing info & footer sections

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <a href="#"
+            <a href="#main-section"
               ><img src="imgs/bakery-light-1.png" id="logo-image" alt="Logo"
             /></a>
           </div>
           <button id="navbar-toggle" class="bar-button">&#9776;</button>
           <ul id="main-nav">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Our Offer</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="active" href="#main-section">Home</a></li>
+            <li><a href="#about-section">About</a></li>
+            <li><a href="#our-offer-section">Our Offer</a></li>
+            <li><a href="#gallery-section">Gallery</a></li>
+            <li><a href="#contact-section">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -51,7 +51,7 @@
       </div>
     </div>
     <!-- Main Section -->
-    <section class="main-section">
+    <section class="main-section" id="main-section">
       <div class="main-section-content">
         <div class="text">
           <p class="first-p">Welcome to</p>
@@ -68,7 +68,7 @@
       </div>
     </section>
     <!-- About -->
-    <div class="about">
+    <div class="about" id="about-section">
       <div class="container">
         <div class="about-content">
           <div class="image">
@@ -105,7 +105,7 @@
       </div>
     </div>
     <!-- Our Offer -->
-    <div class="our-offer">
+    <div class="our-offer" id="our-offer-section">
       <div class="container">
         <div class="our-offer-content">
           <div class="text">
@@ -129,7 +129,7 @@
       </div>
     </div>
     <!-- Gallery -->
-    <div class="gallery">
+    <div class="gallery" id="gallery-section">
       <div class="container">
         <div class="gallery-content">
           <h2>Our Baking</h2>
@@ -178,7 +178,7 @@
       </div>
     </div>
     <!-- Contact -->
-    <div class="contact">
+    <div class="contact" id="contact-section">
       <div class="container">
         <div class="contact-content">
           <div class="text">
@@ -213,74 +213,111 @@
         </div>
       </div>
     </div>
+    <!-- info -->
+    <div class="info">
+      <div class="container">
+        <div class="info-content">
+          <div class="about">
+            <h3>About Us</h3>
+            <p>
+              I am text block. Click edit button to change this text. Lorem
+              ipsum dolor sit amet, consectetur. I am text block. Click edit
+              button to change this text. Lorem ipsum dolor sit amet,
+              consectetur.
+            </p>
+            <p>
+              We are the champions! We are the most amazing theme of all time,
+              yeah.
+            </p>
+          </div>
+          <div class="special">
+            <h3>Why We Are Special?</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Our magical recipe.
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Our magical recipe.
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>We are trusted by
+                hundreds of clients.
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Social media loves us!
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>This list is super easy
+                to create.
+              </li>
+            </ul>
+          </div>
+          <div class="opening-hours">
+            <h3>Opening Hours</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Monday 10AM - 9PM
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Tuesday 10AM - 9PM
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Wednesday 10AM - 9PM
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Thursday 10AM - 10PM
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Friday 10AM - 10PM
+              </li>
+              <li>
+                <i class="fa-solid fa-chevron-right"></i>Weekends 10AM - 11PM
+              </li>
+            </ul>
+          </div>
+          <div class="contact">
+            <h3>Contact Details</h3>
+            <ul>
+              <li>
+                <a href="#"
+                  ><i class="fa-solid fa-location-dot"></i>Manchester Road
+                  123-78B, Silictown 7854MD, Great Country</a
+                >
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-phone"></i>+46 123 456 789</a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="fa-solid fa-at"></i>Friday 10AM - 10PM Weekends
+                  10AM - 11PM Contact Details Manchester Road 123-78B, Silictown
+                  7854MD, Great Country +46 123 456 789 hello@sitename.com</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="fa-solid fa-globe"></i>http://www.sitename.com</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
-          <div class="info">
-            <div class="about">
-              <h3>About Us</h3>
-              <p>
-                I am text block. Click edit button to change this text. Lorem
-                ipsum dolor sit amet, consectetur. I am text block. Click edit
-                button to change this text. Lorem ipsum dolor sit amet,
-                consectetur.
-              </p>
-              <p>
-                We are the champions! We are the most amazing theme of all time,
-                yeah.
-              </p>
-            </div>
-            <div class="special">
-              <ul>
-                <li>Our magical recipe.</li>
-                <li>Our magical recipe.</li>
-                <li>We are trusted by hundreds of clients.</li>
-                <li>Social media loves us!</li>
-                <li>This list is super easy to create.</li>
-              </ul>
-            </div>
-            <div class="opening-hours">
-              <ul>
-                <li>Monday 10AM - 9PM</li>
-                <li>Tuesday 10AM - 9PM</li>
-                <li>Wednesday 10AM - 9PM</li>
-                <li>Thursday 10AM - 10PM</li>
-                <li>Friday 10AM - 10PM</li>
-                <li>Weekends 10AM - 11PM</li>
-              </ul>
-            </div>
-            <div class="contact">
-              <ul>
-                <li>
-                  <a href="#"
-                    >Manchester Road 123-78B, Silictown 7854MD, Great Country</a
-                  >
-                </li>
-                <li><a href="#">+46 123 456 789</a></li>
-                <li>
-                  <a href="#"
-                    >Friday 10AM - 10PM Weekends 10AM - 11PM Contact Details
-                    Manchester Road 123-78B, Silictown 7854MD, Great Country +46
-                    123 456 789 hello@sitename.com</a
-                  >
-                </li>
-                <li><a href="#">http://www.sitename.com</a></li>
-              </ul>
-            </div>
+          <div class="image">
+            <img src="imgs/bakery-light-1.png" alt="" />
           </div>
-          <div class="logo-copyright">
-            <div class="image">
-              <img src="imgs/bakery-light-1.png" alt="" />
-            </div>
-            <p class="copyright">Copyright 2022. All rights reserved.</p>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
+          <p class="copyright">Copyright 2022. All rights reserved.</p>
+          <ul>
+            <li><i class="fa-brands fa-facebook"></i></li>
+            <li><i class="fa-brands fa-google-plus"></i></li>
+            <li><i class="fa-brands fa-linkedin"></i></li>
+            <li><i class="fa-brands fa-twitter"></i></li>
+          </ul>
         </div>
       </div>
     </footer>
